--- a/CODE/home.html
+++ b/CODE/home.html
@@ -41,7 +41,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 SocioGram - PicSquare. All rights reserved.</p>
+    <p>&copy; SocioGram - PicSquare. All rights reserved.</p>
   </footer>
 
   <script src="home.js"></script>
